--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <script src="https://kit.fontawesome.com/b9045a564f.js" crossorigin="anonymous"></script>
+
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
@@ -15,33 +19,45 @@
 
   <link rel="stylesheet" href="/scss/main.css">
 
+
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
 
 </head>
 
 <body>
-  <div class="bg-wrapper">
 
     <header>
-      <nav>
-        <img src="/images/logo.svg" alt="logo" title="Huddle">
+      <nav class="nav">
+        <img class="logo" src="/images/logo.svg" alt="Logo" title="Huddle">
       </nav>
     </header>
-    <main>
-      <div class="img-container">
-        <img src="/images/illustration-mockups.svg" width="100%" alt="">
-      </div>
-      <div class="text-info">
-        <h1>Build Your Community Your Fans Will Love</h1>
-        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
-        <div class="btn-wrap">
-        <a href="#" class="btn">Register</a>
-      </div>
-      </div>
-    </main>
-  </div>
 
+    <main>
+      <div class="content">
+        <div class="image">
+          <img src="/images/illustration-mockups.svg"  alt="">
+        </div>
+        <div class="text">
+          <h1>Build The Community Your Fans Will Love</h1>
+          <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create
+            connections with your users as you engage in genuine discussion.</p>
+
+            <div class="btn-wrap">
+            <a href="" class="btn">Register</a>
+          </div>
+        </div>
+
+    </main>
+
+    <footer>
+      <div class="social-icons">
+        <i class="fab fa-lg fa-facebook"></i>
+        <i class="fab fa-lg fa-twitter"></i>
+        <i class="fab fa-lg fa-instagram"></i>
+      </div>
+    </footer>
+  </div>
 
 
 </body>
