--- a/index.html
+++ b/index.html
@@ -27,38 +27,43 @@
 
 <body>
 
-    <header>
-      <nav class="nav">
-        <img class="logo" src="/images/logo.svg" alt="Logo" title="Huddle">
-      </nav>
-    </header>
-
-    <main>
-      <div class="content">
-        <div class="image">
-          <img src="/images/illustration-mockups.svg"  alt="">
-        </div>
-        <div class="text">
-          <h1>Build The Community Your Fans Will Love</h1>
-          <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create
-            connections with your users as you engage in genuine discussion.</p>
-
-            <div class="btn-wrap">
-            <a href="" class="btn">Register</a>
-          </div>
-        </div>
-
-    </main>
-
-    <footer>
-      <div class="social-icons">
-        <i class="fab fa-lg fa-facebook"></i>
-        <i class="fab fa-lg fa-twitter"></i>
-        <i class="fab fa-lg fa-instagram"></i>
+  <header>
+    <nav class="nav">
+      <div class="logo">
+        <img src="/images/logo.svg" width="100%" alt="">
       </div>
-    </footer>
-  </div>
 
+    </nav>
+  </header>
+
+  <main class="main-container">
+
+    <div class="image">
+      <img src="/images/illustration-mockups.svg" width="100%" alt="">
+    </div>
+
+    <div class="content">
+      <div class="text">
+        <h1>Build The Community Your Fans Will Love</h1>
+        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create
+          connections with your users as you engage in genuine discussion.</p>
+        <button class="btn">Register</button>
+      </div>
+    </div>
+
+
+  </main>
+
+
+  <footer>
+    <div class="social">
+      <div class="icons">
+        <i class="fab fa-facebook fa-lg"></i>
+        <i class="fab fa-twitter fa-lg"></i>
+        <i class="fab fa-instagram fa-lg"></i>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
