--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="/scss/main.css">
+  <link rel="stylesheet" href="HuddleLandingPage/scss/main.css">
 
 
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
@@ -30,7 +30,7 @@
   <header>
     <nav class="nav">
       <div class="logo">
-        <img src="/images/logo.svg" width="100%" alt="">
+        <img src="./images/logo.svg" width="100%" alt="">
       </div>
 
     </nav>
@@ -39,7 +39,7 @@
   <main class="main-container">
 
     <div class="image">
-      <img src="/images/illustration-mockups.svg" width="100%" alt="">
+      <img src="./images/illustration-mockups.svg" width="100%" alt="">
     </div>
 
     <div class="content">
