--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="HuddleLandingPage/scss/main.css">
+  <link rel="stylesheet" href="./scss/main.css">
 
 
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
